--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,18 @@ Description: Golem-paketierte Shiny App.
 License: What license is it under?
 Imports: 
     config (>= 0.3.2),
+    data.table,
+    dplyr,
+    furrr,
     golem (>= 0.4.1),
-    shiny (>= 1.9.0)
+    icons,
+    reactable,
+    shiny (>= 1.9.0),
+    shinycssloaders,
+    shinyjs,
+    stringr,
+    tidyr,
+    zuericssstyle
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.2
