fix excel download by adding packages and adjusting pathx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(run_app)
 import(dplyr)
+import(openxlsx)
 import(reactable)
 import(shiny)
 import(zuericssstyle)
@@ -11,6 +12,7 @@ importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(icons,icon_set)
+importFrom(readxl,read_excel)
 importFrom(shiny,shinyApp)
 importFrom(stringr,str_remove_all)
 importFrom(tidyr,gather)
