--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Imports:
     furrr,
     golem (>= 0.4.1),
     icons,
+    openxlsx,
     reactable,
+    readxl,
     shiny (>= 1.9.0),
     shinycssloaders,
     shinyjs,
