--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Imports:
     golem (>= 0.4.1),
     icons,
     openxlsx,
+    pkgload,
     reactable,
     readxl,
     shiny (>= 1.9.0),
@@ -26,3 +27,5 @@ RoxygenNote: 7.3.2
 Suggests: 
     lintr,
     styler
+Depends: 
+    R (>= 2.10)
