--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,8 @@ renv-restore-job:
 deploy-job-test:
   # ausgeführt wenn push in merge request
   stage: deploy_test
-  needs: restore
+  needs: 
+    - restore
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
   variables:
@@ -42,7 +43,8 @@ deploy-job-test:
 deploy-job-prod:
   # ausgeführt wenn Push auf Main branch
   stage: deploy_prod
-  needs: restore
+  needs: 
+    - restore
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   variables:
