add rules to restore job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,9 @@ renv-restore-job:
   stage: restore
   script:
     - Rscript -e "renv::restore()"
+    rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 deploy-job-test:
   # ausgeführt wenn push in merge request
