--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,27 +18,18 @@ cache:
     - ${RENV_PATHS_CACHE}
 
 stages:
-  - restore
   - deploy_test
   - deploy_prod
-
-renv-restore-job:
-  stage: restore
-  script:
-    - Rscript -e "renv::restore()"
-  rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 deploy-job-test:
   # ausgeführt wenn push in merge request
   stage: deploy_test
-  needs: 
-    - renv-restore-job
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
   variables:
     APP_NAME: $TEST_NAME
+  before_script:
+    - Rscript -e "renv::restore()"
   script:
     - Rscript -e "source('data-raw/create_latest_data.R')"
     - Rscript -e "source('dev/deploy.R')"
@@ -46,12 +37,12 @@ deploy-job-test:
 deploy-job-prod:
   # ausgeführt wenn Push auf Main branch
   stage: deploy_prod
-  needs: 
-    - renv-restore-job
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   variables:
     APP_NAME: $PROD_NAME
+  before_script:
+    - Rscript -e "renv::restore()"
   script:
     - Rscript -e "packageVersion('rsconnect')"
     - Rscript -e "source('data-raw/create_latest_data.R')"
