--- a/renv/settings.json
+++ b/renv/settings.json
@@ -1,7 +1,7 @@
 {
   "bioconductor.version": null,
   "external.libraries": [],
-  "ignored.packages": [],
+  "ignored.packages": ["KALI"],
   "package.dependency.fields": [
     "Imports",
     "Depends",
