check renv::status in gitlab pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ deploy-job-test:
   before_script:
     - Rscript -e "renv::restore()"
   script:
+    - Rscript -e "renv::status()"
     - Rscript -e "source('data-raw/create_latest_data.R')"
     - Rscript -e "source('dev/deploy.R')"
 
@@ -44,6 +45,6 @@ deploy-job-prod:
   before_script:
     - Rscript -e "renv::restore()"
   script:
-    - Rscript -e "packageVersion('rsconnect')"
+    - Rscript -e "renv::restore()"
     - Rscript -e "source('data-raw/create_latest_data.R')"
     - Rscript -e "source('dev/deploy.R')"
