get rid of using names as if they were variables in data loading

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ importFrom(icons,icon_set)
 importFrom(readxl,read_excel)
 importFrom(shiny,shinyApp)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace)
 importFrom(tidyr,gather)
