in data load, get rid of gather and one warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ importFrom(shiny,shinyApp)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(tidyr,gather)
+importFrom(tidyr,pivot_longer)
