deal with some warnings/notes from devtools::check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,12 @@ Imports:
     dplyr,
     furrr,
     golem (>= 0.4.1),
+    htmltools,
     icons,
+    jsonlite,
     openxlsx,
     pkgload,
+    purrr,
     reactable,
     readxl,
     shiny (>= 1.9.0),
