create function to create data download

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
+importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
